test/files/neg/t6476.check
t6476.scala:2: error: unclosed string literal
  s"$"
    ^
one error found
